--- a/package.json
+++ b/package.json
@@ -1,24 +1,37 @@
 {
-  "name": "deploy-exercise",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "nodemon ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "~1.15.2",
-    "connect-mongo": "^1.3.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "ejs": "~2.5.2",
-    "express": "~4.14.0",
-    "express-ejs-layouts": "^2.2.0",
-    "express-session": "^1.15.0",
-    "mongodb": "^2.2.22",
-    "mongoose": "^4.8.1",
-    "morgan": "~1.7.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.11.0"
-  }
+    "name": "deploy-exercise",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "nodemon ./bin/www",
+        "start-dev": "nodemon ./bin/www"
+    },
+    "dependencies": {
+        "body-parser": "~1.15.2",
+        "connect-mongo": "^1.3.2",
+        "cookie-parser": "~1.4.3",
+        "debug": "~2.2.0",
+        "ejs": "~2.5.2",
+        "express": "~4.14.0",
+        "express-ejs-layouts": "^2.2.0",
+        "express-session": "^1.15.0",
+        "mongodb": "^2.2.22",
+        "mongoose": "^4.8.1",
+        "morgan": "~1.7.0"
+    },
+    "devDependencies": {
+        "nodemon": "^1.11.0"
+    },
+    "main": "app.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/j-galindo/lab-first-deploy.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/j-galindo/lab-first-deploy/issues"
+    },
+    "homepage": "https://github.com/j-galindo/lab-first-deploy#readme",
+    "description": ""
 }
